Archive2/be/4cc10d580fe438/output
main.cpp:6:2: error: expected ';' after class
}
 ^
 ;
1 error generated.
